# Argos_Core

./: .gitignore  CLAUDE.md  Dockerfile  HANDOFF.md  JARVIS_LATENCY_BRIEF.md  MCP_CLIENTS.md  README.md  SESSIONS.md  api.py  hola_argos.txt  main.py  model_config.json  pyproject.toml  requirements.txt
core/: agent.py  brain.py  bridge_client.py  collective.py  config.py  knowledge.py  mcp_comfyui.py  mcp_frigate.py  mcp_langchain_adapter.py  mcp_projectmap.py  mcp_server.py  mcp_tools.py  mcp_vassago.py  mcp_vision.py  prompts.py  tools.py
utils/: logger_config.py
