[project]
name = "argos-core"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ddgs>=9.10.0",
    "langchain-core>=1.2.9",
    "langchain-ollama>=1.0.1",
    "langgraph>=1.0.8",
    "ollama>=0.6.1",
    "pygithub>=2.8.1",
    "requests>=2.32.5",
    "rich>=14.3.2",
]
